--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hi, I'm [Your Name], a behavioural economist researching how people make decisions in various economic environments. My work spans behavioural insights, decision-making games, and real-world applications.</p>
+        <p>Hi, I'm [Your Name], a behavioural economist researching how people make decisions in various economic environments.</p>
     </section>
 
     <section id="portfolio">
