--- a/index.html
+++ b/index.html
@@ -10,49 +10,22 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#games">Games</a></li>
-                <li><a href="#surveys">Surveys</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="games.html">Games</a></li>
+                <li><a href="surveys.html">Surveys</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="home" class="hero">
+    <section id="home">
         <h1>Welcome to My Behavioural Economics World</h1>
         <p>Exploring the fascinating intersection of economics, behaviour, and human decision-making.</p>
         <img src="profile-pic.jpg" alt="Profile Picture" class="profile-img">
     </section>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hi, I'm [Your Name], a behavioural economist researching how people make decisions in various economic environments.</p>
-    </section>
-
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <p>Here’s where I share my research papers, articles, and presentations on behavioural economics.</p>
-        <ul>
-            <li><a href="paper1.pdf">Research Paper 1</a></li>
-            <li><a href="paper2.pdf">Research Paper 2</a></li>
-        </ul>
-    </section>
-
-    <section id="games">
-        <h2>Games</h2>
-        <p>Explore interactive games based on behavioural economics principles.</p>
-        <a href="game1.html">Game 1</a>
-    </section>
-
-    <section id="surveys">
-        <h2>Surveys</h2>
-        <p>Participate in my latest research surveys and contribute to the understanding of economic behaviour.</p>
-        <a href="survey1.html">Take Survey 1</a>
-    </section>
-
     <footer>
-        <p>&copy; 2024 My Behavioural Economics Portfolio | Connect with me on <a href="https://www.linkedin.com">LinkedIn</a></p>
+        <p>&copy; 2024 My Behavioural Economics Portfolio</p>
     </footer>
 </body>
 </html>
